    Hsin-Yu Ko (Cornell), et al.

Fixed in development version:
  * Fictitious charge particle (FCP) works again. [arXiv:2012.10090]
  * Bugfix in HP: the hp.x calculation was not stopping smoothly when
    "perturb_only_atom" was used (this bug is not present in earlier 
    versions, i.e. <6.7)
  * Phonon restart was broken in some cases due to bad occupations
    written to xml file

Incompatible changes in dev version:
  * lfcpopt & lfcpdyn are replaced by lfcp. Only static optimization of the
    Fermi energy works. Currently, molecular dynamics with FCP does not work.

New in 6.7 version:
  * Support for CMake (F. Ficarelli and D. Cesarini, CINECA, with help from
    Ye Luo, P. Delugas, S. Gsaenger)
  * In vc-relax with Hubbard corrections, the final SCF calculation is done by 
    reading atomic occupations from file produced during the vc-relax 
    (rather than recomputing them from scratch).
  * EPW: 
    (1) ZG package to generate special displacements for first-principles non-perturbative calculations 
    at finite temperatures [Marios Zacharias and Feliciano Giustino, Phys. Rev. Research 2, 013357, (2020)].
    (2) Plotting of Fermi surface.
    For the full list of new features, bug fixes, and changes leading to backward incompatibility issues, 
    please visit the Releases page of the EPW documentation site [https://docs.epw-code.org/doc/Releases.html].

Fixed in 6.7 version:
  * Some linkers yield "missing references to ddot_" in libbeef
  * Bogus errors in scale_sym_ops in some cases of almost-symmetric crystals
  * FFT test in FFTXlib was not always compiling 
  * angle1, angle2, starting_magnetization incorrectly written to xml file
  * Bug in Hubbard forces and stress for bands parallelization (when nproc_pool>nbnd) 
  * Bug in DFT+U+V when starting_ns_eigenvalue is used (courtesy of M. Cococcioni)
  * Crash in the calculation of Z* with ultrasoft PP when the number of bands