@@ -31,9 +31,9 @@ default :
 	@echo '  ld1          utilities for pseudopotential generation'
 	@echo '  xspectra     X-ray core-hole spectroscopy calculations'
 	@echo '  couple       Library interface for coupling to external codes'
-	@echo '  epw          Electron-Phonon Coupling with wannier functions'
+	@echo '  epw          Electron-Phonon Coupling with Wannier functions'
 	@echo '  gui          Graphical User Interface'
-	@echo '  all          same as "make pwall cp ld1 tddfpt hp"'
+	@echo '  all          same as "make pwall cp ld1 tddfpt xspectra hp"'
 	@echo ' '
 	@echo 'where target identifies one or multiple THIRD-PARTIES PACKAGES:'
 	@echo '  gipaw        NMR and EPR spectra'
