@@ -16,10 +16,12 @@ Fixed in development version:
     versions, i.e. <6.7)
   * Phonon restart was broken in some cases due to bad occupations
     written to xml file
+  * ELF with nspin=2 was not correct (noticed by Dong Yang, JSG)
 
-Incompatible changes in dev version:
+Incompatible changes in development version:
   * lfcpopt & lfcpdyn are replaced by lfcp. Only static optimization of the
     Fermi energy works. Currently, molecular dynamics with FCP does not work.
+  * Exchange-correlation code moved to XClib/
 
 New in 6.7 version:
   * Support for CMake (F. Ficarelli and D. Cesarini, CINECA, with help from
